0.1-Beta2
  - Fixed a bug in the display of the maximum allowed file size
  - changed display of maximum allowed file size to be more human readable
  - added the check if at first startup the config.php has been 
    succesfully created

0.1-Beta1
  - Included all translations in the sourcecode
  - Added english (en) and german (de) translations
  - Changed the size of the upload form to make it usable on "smaller" screens
  - maximum file size for upload is now being displayed

0.1-Alpha2
Mail:
  - Successfull sending of mail will be now reported to the user
  - Reformatted the text in the E-Mail
  - Link to file should now work correctly

General:
  - Extracted functions to own file calles "functions.php"
  - created a config.php.templ to avoid overwriting changed settings by user in there owen config.php. If at startup no config.php is found the template will be copied to set the defaults

Translations:
  - new "firstStart"-text is displayed when default configuration has been created because of first time starting SiFiEx

0.1-Alpha1
First published version to give a first impression of upcoming release